[osgi] correcting path handling by `BndOsmorcFrameworkDetector`; tests
GitOrigin-RevId: 4b0c51d7621570543ff846e7f48429f1dc9c2e4c